# rust_raytracer

./: .gitignore  Cargo.toml  README.md  build_typescript.sh  build_wasm.sh  index.html  notes.md  script.js  wasm_interface.wasm  worker_for_render.js
.github/workflows/: deploy_gh_pages.yml
lib_raytracer/: Cargo.toml
lib_raytracer/src/: canvas.rs  gpu_types.rs  lib.rs  object_file.rs  scene.rs  utils.rs
lib_raytracer/src/exercise1/: canvas.rs  mod.rs  object_file.rs  scene.rs
lib_raytracer/src/exercise1/scene_file/: json_format.rs  mesh_loader.rs  parser.rs
lib_raytracer/src/exercise1/scene_file_parser/: mod.rs
lib_raytracer/src/raytracing/: Screen.rs  background.rs  camera.rs  color.rs  hitpoint.rs  instance.rs  intersect.rs  intersect_tests.rs  light.rs  material.rs  mod.rs  ray.rs  raytracer.rs  transform.rs
lib_raytracer/src/raytracing/bvh/: builder.rs  bvh.rs  hull.rs  mod.rs  node.rs
lib_raytracer/src/raytracing/geometry/: aabb.rs  mesh.rs  mesh_triangle.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
lib_raytracer/src/scene_file/: json_format.rs  mesh_loader.rs  mod.rs  parser.rs
lib_raytracer/src/utils/: alias_arc.rs  alias_rc.rs  mod.rs
native_app/: Cargo.toml
native_app/src/: filesystem_mesh_loader.rs  main.rs  write_png.rs
native_interface/: Cargo.toml
native_interface/src/: main.rs  write_png.rs
pkg/: message_from_worker.js  message_to_worker.js  package.json  wasm_interface.d.ts  wasm_interface.js  wasm_interface_bg.wasm  wasm_interface_bg.wasm.d.ts  web_app.d.ts  web_app.js  web_app_bg.wasm  web_app_bg.wasm.d.ts
pkg/main/: controller.d.ts  controller.js  main.js  model.d.ts  model.js  nullworker_lol.js  render_worker_pool.d.ts  render_worker_pool.js  test_module.d.ts  test_module.js  tsconfig.tsbuildinfo  view.d.ts  view.js
pkg/messages/: message_from_worker.d.ts  message_from_worker.js  message_to_worker.d.ts  message_to_worker.js  tsconfig.tsbuildinfo
pkg/worker/: nullworker_lol.js  render_worker.d.ts  render_worker.js  test_module.js  tsconfig.tsbuildinfo
res/models/: Copyright.txt
res/scenes/: cornell_box.json  infinity_santa.json  mirror_sphere.json  og_scene_bvh_comparison.json  og_scene_rust.json  purple_marbles.json  santa_and_balls.json  scene_rust.json
scripts/main/: controller.ts  model.ts  render_worker_pool.ts  tsconfig.bak.json  view.ts
scripts/messages/: message_from_worker.ts  message_to_worker.ts  tsconfig.json
scripts/worker/: nullworker_lol.ts  render_worker.ts  test_module.ts  tsconfig.bak.json  tsconfig.json
src/: color.rs  fake_same_mesh_loader.rs  lib.rs  main.rs  renderer.rs  test_module.js  test_worker.js  test_worker_module.js  test_worker_module_proxy.js  utils.rs
src/exercise1/: canvas.rs  mod.rs  object_file.rs  scene.rs
src/raytracing/: camera.rs  color.rs  hitpoint.rs  instance.rs  intersect.rs  intersect_tests.rs  light.rs  material.rs  mod.rs  ray.rs  raytracer.rs  sphere.rs  transform.rs  triangle.rs
src/raytracing/geometry/: aabb.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/raytracing/primitives/: mod.rs  plane.rs  sphere.rs  triangle.rs
wasm_interface/: Cargo.toml  build_wasm.sh  index.html  script.js  worker_for_render.js
wasm_interface/src/: lib.rs
web_app/: .gitignore  Cargo.toml  build_typescript.sh  build_wasm.sh  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  script.js  tsconfig.base.json  tsconfig.json  vite.config.ts  worker_for_render.js
web_app/.cargo/: config.toml
web_app/public/res/scenes/: gpu_test.json  infinity_santa.json  mirror_sphere.json  og_scene_bvh_comparison.json  purple_marbles.json
web_app/res/scenes/: cornell_box.json  gpu_test.json  og_scene_bvh_comparison.json  og_scene_rust.json  santa_and_balls.json  scene_bvh_comparison.json  scene_rust.json
web_app/scripts/: message_from_worker.ts  message_to_worker.ts  tsconfig.json
web_app/scripts/main/: asset_store.ts  controller.ts  main.ts  model.ts  render_worker_pool.ts  tsconfig.json  view.ts
web_app/scripts/messages/: asset_store.ts  message_to_worker.ts  tsconfig.json  util.ts
web_app/scripts/worker/: render_worker.ts  tsconfig.json
web_app/src/: asset_store.rs  color.rs  fake_same_mesh_loader.rs  fetch.rs  gpu_renderer.rs  lib.rs  mesh_fetcher.rs  mesh_file_store.rs  mesh_store.rs  renderer.rs  shader.wgsl  shader_first_colors.wgsl  utils.rs
web_app/src/main/: controller.ts  main.ts  model.ts  render_worker_pool.ts  tsconfig.json  view.ts
web_app/src/messages/: asset_store.ts  message_to_worker.ts  tsconfig.json  util.ts
web_app/src/worker/: render_worker.ts  tsconfig.json
web_app/wasm/: Cargo.toml  package.json
web_app/wasm/src/: gpu_renderer.rs  lib.rs  mesh_fetcher.rs  renderer.rs  shader.wgsl  utils.rs
web_renderer/: index.html  script.js
