[package]
name = "lib_raytracer"
version = "0.1.0"
authors = ["Therdel <14974231+Therdel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.15"
float_eq = "0.5"
num-traits = "0.2"
tobj = "3.0.0"