[package]
name = "lib_raytracer"
version = "0.1.0"
authors = ["Therdel <14974231+Therdel@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"] }
float_eq = "0.5"
num-traits = "0.2"
tobj = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
tinyvec = { version = "1.6.0", features = ["rustc_1_55"] }