[package]
name = "native_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_raytracer = { path = "../lib_raytracer" }
stb = { version = "0.3.2", default-features = false, features = ["stb_image_write"] }
nalgebra-glm = "0.15"
num-traits = "0.2"
rayon = "1.5.0"