[package]
name = "wasm_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_raytracer = { path = "../lib_raytracer" }
nalgebra-glm = "0.15"
num-traits = "0.2"

[lib]
crate-type = ["cdylib"]