[package]
name = "wasm_interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lib_raytracer = { path = "../lib_raytracer" }
nalgebra-glm = "0.15"
num-traits = "0.2"
wasm-bindgen = "0.2.78"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# Todo: Maybe use Wee-Alloc
